--- a/client/src/assets/i18n/template-en.pot
+++ b/client/src/assets/i18n/template-en.pot
@@ -7,6 +7,9 @@ msgstr ""
 msgid "%num% emails were send sucessfully."
 msgstr ""
 
+msgid "100% base"
+msgstr ""
+
 msgid ""
 "<a href=\"http://www.openslides.org\">OpenSlides</a> is a free web based "
 "presentation and assembly system for visualizing and controlling agenda, "
@@ -189,6 +192,12 @@ msgstr ""
 msgid "An unknown error occurred."
 msgstr ""
 
+msgid "Anonymize votes"
+msgstr ""
+
+msgid "Anonymous"
+msgstr ""
+
 msgid "Apply"
 msgstr ""
 
@@ -214,9 +223,6 @@ msgid "Are you sure you want to delete all speakers from this list of speakers?"
 msgstr ""
 
 msgid "Are you sure you want to delete the print template?"
-msgstr ""
-
-msgid "Are you sure you want to delete this ballot?"
 msgstr ""
 
 msgid "Are you sure you want to delete this category and all subcategories?"
@@ -247,6 +253,9 @@ msgid "Are you sure you want to delete this motion?"
 msgstr ""
 
 msgid "Are you sure you want to delete this participant?"
+msgstr ""
+
+msgid "Are you sure you want to delete this poll?"
 msgstr ""
 
 msgid "Are you sure you want to delete this projector?"
@@ -308,6 +317,9 @@ msgstr ""
 msgid "Are you sure you want to reset all passwords to the default ones?"
 msgstr ""
 
+msgid "Are you sure you want to reset this poll? All Votes will be lost."
+msgstr ""
+
 msgid "Are you sure you want to send an invitation email to the user?"
 msgstr ""
 
@@ -344,6 +356,12 @@ msgstr ""
 msgid "Ballot and ballot papers"
 msgstr ""
 
+msgid "Ballot is open"
+msgstr ""
+
+msgid "Ballot paper"
+msgstr ""
+
 msgid "Base folder"
 msgstr ""
 
@@ -366,6 +384,9 @@ msgid "Called"
 msgstr ""
 
 msgid "Called with"
+msgstr ""
+
+msgid "Can be voted for"
 msgstr ""
 
 msgid "Can change its own password"
@@ -477,6 +498,9 @@ msgid "Cancel edit"
 msgstr ""
 
 msgid "Candidates"
+msgstr ""
+
+msgid "Cannot be voted for"
 msgstr ""
 
 msgid "Cannot create PDF files on this browser."
@@ -626,19 +650,31 @@ msgstr ""
 msgid "Create final print template"
 msgstr ""
 
+msgid "Created"
+msgstr ""
+
 msgid "Creating PDF file ..."
 msgstr ""
 
 msgid "Creation date"
 msgstr ""
 
+msgid "Current"
+msgstr ""
+
 msgid "Current browser language"
+msgstr ""
+
+msgid "Current choice"
 msgstr ""
 
 msgid "Current date"
 msgstr ""
 
 msgid "Current list of speakers"
+msgstr ""
+
+msgid "Current state"
 msgstr ""
 
 msgid "Custom aspect ratio"
@@ -816,10 +852,10 @@ msgstr ""
 msgid "Edit the whole motion text"
 msgstr ""
 
-msgid "Edit topic"
+msgid "Edit to enter votes."
 msgstr ""
 
-msgid "Elected"
+msgid "Edit topic"
 msgstr ""
 
 msgid "Election"
@@ -829,9 +865,6 @@ msgid "Election documents"
 msgstr ""
 
 msgid "Election method"
-msgstr ""
-
-msgid "Election result"
 msgstr ""
 
 msgid "Elections"
@@ -879,9 +912,6 @@ msgid ""
 msgstr ""
 
 msgid "Enter participant number"
-msgstr ""
-
-msgid "Enter votes"
 msgstr ""
 
 msgid "Enter your email to send the password reset link"
@@ -1026,6 +1056,12 @@ msgstr ""
 msgid "Given name"
 msgstr ""
 
+msgid "Global abstain"
+msgstr ""
+
+msgid "Global no"
+msgstr ""
+
 msgid "Go to line"
 msgstr ""
 
@@ -1047,7 +1083,13 @@ msgstr ""
 msgid "Has amendments"
 msgstr ""
 
+msgid "Has been voted for"
+msgstr ""
+
 msgid "Has no speakers"
+msgstr ""
+
+msgid "Has not been voted for"
 msgstr ""
 
 msgid "Has notes"
@@ -1086,9 +1128,6 @@ msgstr ""
 msgid "Hide the amount of speakers in subtitle of list of speakers slide"
 msgstr ""
 
-msgid "Hint for ballot paper"
-msgstr ""
-
 msgid "History"
 msgstr ""
 
@@ -1104,6 +1143,11 @@ msgstr ""
 msgid ""
 "Identifier, reason, submitter, category, origin and motion block are "
 "optional and may be empty."
+msgstr ""
+
+msgid ""
+"If you want to publish after creating, you have to fill at least one of the "
+"fields."
 msgstr ""
 
 msgid "Import"
@@ -1122,6 +1166,9 @@ msgid "Import topics"
 msgstr ""
 
 msgid "In motion list, motion detail and PDF."
+msgstr ""
+
+msgid "In the election process"
 msgstr ""
 
 msgid "Inactive"
@@ -1283,9 +1330,6 @@ msgstr ""
 msgid "Main motion and line number"
 msgstr ""
 
-msgid "Mark as elected"
-msgstr ""
-
 msgid "Mark speaker"
 msgstr ""
 
@@ -1299,6 +1343,9 @@ msgid "Messages"
 msgstr ""
 
 msgid "Meta information"
+msgstr ""
+
+msgid "More"
 msgstr ""
 
 msgid "Motion"
@@ -1350,6 +1397,9 @@ msgid "Motions are in process. Please wait ..."
 msgstr ""
 
 msgid "Motions have been imported."
+msgstr ""
+
+msgid "Motions poll list"
 msgstr ""
 
 msgid "Move"
@@ -1505,6 +1555,9 @@ msgstr ""
 msgid "No recommendation"
 msgstr ""
 
+msgid "No results to show"
+msgstr ""
+
 msgid "No search result found"
 msgstr ""
 
@@ -1564,6 +1617,9 @@ msgstr ""
 msgid "Number of the next speakers to be shown on the projector"
 msgstr ""
 
+msgid "Number poll candidates"
+msgstr ""
+
 msgid "Number set"
 msgstr ""
 
@@ -1582,9 +1638,6 @@ msgstr ""
 msgid "OK"
 msgstr ""
 
-msgid "Offline mode"
-msgstr ""
-
 msgid "Old password"
 msgstr ""
 
@@ -1594,9 +1647,6 @@ msgstr ""
 msgid ""
 "One of given name, surname and username has to be filled in. All other "
 "fields are optional and may be empty."
-msgstr ""
-
-msgid "One vote per candidate"
 msgstr ""
 
 msgid "Only countdown"
@@ -1764,13 +1814,10 @@ msgstr ""
 msgid "Please enter your new password"
 msgstr ""
 
-msgid "Please fill in all required values"
-msgstr ""
-
-msgid "Please fill in the values for each candidate"
-msgstr ""
-
 msgid "Please select the directory:"
+msgstr ""
+
+msgid "Poll list"
 msgstr ""
 
 msgid "Preamble text for PDF document (all elections)"
@@ -1806,12 +1853,6 @@ msgstr ""
 msgid "Previous slides"
 msgstr ""
 
-msgid "Print ballot paper"
-msgstr ""
-
-msgid "Print ballot papers"
-msgstr ""
-
 msgid "Privacy Policy"
 msgstr ""
 
@@ -1842,22 +1883,25 @@ msgstr ""
 msgid "Projectors"
 msgstr ""
 
+msgid "Pseudoanonymize"
+msgstr ""
+
 msgid "Public"
 msgstr ""
 
 msgid "Public item"
 msgstr ""
 
-msgid "Publish"
+msgid "Publish immediately"
+msgstr ""
+
+msgid "Published"
 msgstr ""
 
 msgid "Put all candidates on the list of speakers"
 msgstr ""
 
 msgid "Queue"
-msgstr ""
-
-msgid "Quorum"
 msgstr ""
 
 msgid "Re-add last speaker"
@@ -1970,6 +2014,9 @@ msgid "Resolution and size"
 msgstr ""
 
 msgid "Restrictions"
+msgstr ""
+
+msgid "Result"
 msgstr ""
 
 msgid "Right"
@@ -2179,6 +2226,9 @@ msgstr ""
 msgid "Simple majority"
 msgstr ""
 
+msgid "Single votes"
+msgstr ""
+
 msgid "Slide"
 msgstr ""
 
@@ -2212,9 +2262,6 @@ msgstr ""
 msgid "Speakers"
 msgstr ""
 
-msgid "Special values"
-msgstr ""
-
 msgid "Staff"
 msgstr ""
 
@@ -2225,6 +2272,9 @@ msgid "Standard page size in PDF"
 msgstr ""
 
 msgid "Start time"
+msgstr ""
+
+msgid "Started"
 msgstr ""
 
 msgid "State"
@@ -2338,6 +2388,9 @@ msgstr ""
 msgid "The file seems to have some ommitted columns. They will be considered empty."
 msgstr ""
 
+msgid "The individual votes were made anonymous."
+msgstr ""
+
 msgid "The link is broken. Please contact your system administrator."
 msgstr ""
 
@@ -2396,6 +2449,9 @@ msgid "This change collides with another one."
 msgstr ""
 
 msgid "This element does not exist at this time."
+msgstr ""
+
+msgid "This field is required"
 msgstr ""
 
 msgid "This field is required."
@@ -2502,7 +2558,10 @@ msgstr ""
 msgid "Undone"
 msgstr ""
 
-msgid "Unpublish"
+msgid "Unknown User"
+msgstr ""
+
+msgid "Unknown user"
 msgstr ""
 
 msgid "Unsupport"
@@ -2536,6 +2595,9 @@ msgstr ""
 msgid "Used for WLAN QRCode in PDF of access data."
 msgstr ""
 
+msgid "User"
+msgstr ""
+
 msgid "Username"
 msgstr ""
 
@@ -2554,6 +2616,9 @@ msgstr ""
 msgid "Visibility"
 msgstr ""
 
+msgid "Votability"
+msgstr ""
+
 msgid "Vote"
 msgstr ""
 
@@ -2561,6 +2626,9 @@ msgid "Vote created"
 msgstr ""
 
 msgid "Vote deleted"
+msgstr ""
+
+msgid "Vote state"
 msgstr ""
 
 msgid "Vote updated"
@@ -2575,7 +2643,13 @@ msgstr ""
 msgid "Voting and ballot papers"
 msgstr ""
 
+msgid "Voting is open"
+msgstr ""
+
 msgid "Voting result"
+msgstr ""
+
+msgid "Voting type"
 msgstr ""
 
 msgid "WEP"
@@ -2594,9 +2668,6 @@ msgid "WLAN password"
 msgstr ""
 
 msgid "WPA/WPA2"
-msgstr ""
-
-msgid "Waiting for results"
 msgstr ""
 
 msgid "Web interface header logo"
@@ -2666,6 +2737,12 @@ msgstr ""
 msgid "You do not have the required permission to see that page!"
 msgstr ""
 
+msgid "You have already voted on this poll. Good job!"
+msgstr ""
+
+msgid "You have polls to vote on"
+msgstr ""
+
 msgid "You have to fill this field."
 msgstr ""
 
@@ -2673,6 +2750,9 @@ msgid "You made changes."
 msgstr ""
 
 msgid "You override the personally set password!"
+msgstr ""
+
+msgid "You still have to vote on this poll."
 msgstr ""
 
 msgid "Your password was resetted successfully!"
@@ -2774,9 +2854,6 @@ msgstr ""
 msgid "internal"
 msgstr ""
 
-msgid "is elected"
-msgstr ""
-
 msgid "is now"
 msgstr ""
 
@@ -2819,12 +2896,6 @@ msgstr ""
 msgid "not decided"
 msgstr ""
 
-msgid "not reached"
-msgstr ""
-
-msgid "not reached."
-msgstr ""
-
 msgid "of"
 msgstr ""
 
@@ -2844,12 +2915,6 @@ msgid "public"
 msgstr ""
 
 msgid "published"
-msgstr ""
-
-msgid "reached"
-msgstr ""
-
-msgid "reached."
 msgstr ""
 
 msgid "refered to committee"
@@ -2891,9 +2956,6 @@ msgstr ""
 msgid "undocumented"
 msgstr ""
 
-msgid "unpublished"
-msgstr ""
-
 msgid "with filter"
 msgstr ""
 
@@ -2904,4 +2966,13 @@ msgid "with local storage"
 msgstr ""
 
 msgid "withdrawed"
+msgstr ""
+
+msgid "{{ state.key }}"
+msgstr ""
+
+msgid "{{ value[0] }}"
+msgstr ""
+
+msgid "{{ value[1] }}"
 msgstr ""
